--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Alexander Tomlinso</h1>
+    <h1>Alexander Tomlinson</h1>
     <div class="container">
       <section class="child left">
         <h3>07707 293619</h3>
