add footer link

--- a/ps.html
+++ b/ps.html
@@ -32,7 +32,7 @@
     <p>I frequently attend coding meets. Being a good software developer requires colloboration with your colleagues to be able to meet project demands. I pride myself on my communication skills and frequently attend coding meets. Attending coding meets has been a fantastic experience for me. I have been able to gain advice from more experienced professionals, improve my skills and make friends along the way. Meeting people of different backgrounds and personalities has been enlightening and hearing their stories has shown me that coding can be for anyone. On top of this, I am very active on the CodeCademy and FreeCodeCamp Forums. Whilst I'm not an expert, I take the opportunity to help others where I can with the skills I've learnt. </p>
   </main>
   <footer>
-    <p>To view the code I used to make this CV please follow this <a>link</a></p>
+    <p>To view the code I used to make this CV please follow this <a href="https://github.com/Alex-Codes-02/Alex-Codes-02.github.io">link</a></p>
   </footer>
 </body>
 </html>
