--- a/qualifications.html
+++ b/qualifications.html
@@ -33,7 +33,7 @@
     <div class="link two"><p><a class="coursel" href="https://coursera.org/verify/59MUHFJ62KMN">https://coursera.org/verify/59MUHFJ62KMN</a></p></div>
   </main>
   <footer>
-    <p>To view the code I used to make this CV please follow this <a>link</a></p>
+    <p>To view the code I used to make this CV please follow this <a href="https://github.com/Alex-Codes-02/Alex-Codes-02.github.io">link</a></p>
   </footer>
 </body>
 </html>
