--- a/interests.html
+++ b/interests.html
@@ -59,7 +59,7 @@
     </figure>
   </div>
   <footer>
-    <p>To view the code I used to make this CV please follow this <a href="https://github.com/Alex-Codes-02/Alex-Codes-02.github.io">link</a></p>
+    <p>To view the code I used to make this CV please follow this <a class="mainl" href="https://github.com/Alex-Codes-02/Alex-Codes-02.github.io">link</a></p>
   </footer>
 </body>
 </html>
